Fixed [carousel] and [jumping]

--- a/themes/default/css/carousels.css
+++ b/themes/default/css/carousels.css
@@ -9,6 +9,10 @@
 	position: relative;
 }
 
+.carousel_temp {
+	white-space: nowrap !important;
+}
+
 .carousel .img_thumb {
 	max-width: 140px;
 }
